[package]
name = "radiko-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
quick-xml = { version = "0.27.1", features = ["serialize"] }
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version="1.25.0", features=["full"] }
