[package]
name = "radiko-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
m3u8-rs = "5.0.3"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
roxmltree = "0.18.0"
tokio = { version="1.25.0", features=["full"] }
