[package]
name = "radiko-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Radiko SDK for Rust"
homepage = "https://github.com/kohbanye/radiko-sdk"
repository = "https://github.com/kohbanye/radiko-sdk"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
log = "0.4.17"
m3u8-rs = "5.0.3"
prettytable-rs = "0.10.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
roxmltree = "0.18.0"
tokio = { version="1.25.0", features=["full"] }
